Fix lint paths and ModelInfo import for MLflow 3.x

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,9 @@ jobs:
           python-version: '3.13'
           cache: 'pip'
       - run: pip install ruff flake8 flake8-pyproject
-      - run: ruff format --check mlflow_autogluon tests examples
-      - run: ruff check mlflow_autogluon tests examples
-      - run: flake8 mlflow_autogluon tests examples
+      - run: ruff format --check mlflow_autogluon tests
+      - run: ruff check mlflow_autogluon tests
+      - run: flake8 mlflow_autogluon tests
 
   test:
     runs-on: ubuntu-latest
