--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,10 +100,6 @@ select = [
     "C4",  # flake8-comprehensions
     "UP",  # pyupgrade
 ]
-ignore = [
-    "E501",  # line too long (handled by formatter)
-    "B008",  # do not perform function calls in argument defaults
-]
 
 [tool.ruff.format]
 quote-style = "double"
@@ -116,14 +112,24 @@ max-line-length = 90
 extend-ignore = [
     "E203",   # whitespace before ':' - conflicts with ruff formatter
     "W503",   # line break before binary operator - conflicts with PEP 8
-    "WPS201", # module with too many imports - necessary for MLflow integration
-    "WPS110", # wrong variable name (params, result, etc.) - these are standard names
-    "WPS210", # too many local variables - complexity is acceptable for core functions
+    "WPS110", # wrong variable name (params, result, etc.) - these are standard mlflow names
+
+    # TODO @claude: ignore this rule only for save_model
     "WPS211", # too many arguments - needed for MLflow save_model API compatibility
+
+    # TODO @claude: ignore this rule only for core functions
     "WPS213", # too many expressions - complexity is acceptable for core functions
+
+    # TODO @claude: replace literal over-use with an enum. Let user use string as an argument still and delete the ignore rule
     "WPS226", # string literal over-use - necessary for model_type checks
+
+    # TODO @claude: Decompose the wrapper and delete the ignore rule
     "WPS232", # module cognitive complexity - acceptable for PyFunc wrapper logic
+
+    # TODO @claude: decompose big functions
     "WPS231", # function cognitive complexity - acceptable for model loading logic
+    "WPS210", # too many local variables - complexity is acceptable for core functions
+
     "WPS410", # wrong metadata variable: __all__ - this is standard Python practice
     "WPS412", # __init__.py module with logic - false positive, only imports here
     "WPS529", # implicit .get() dict usage - concise and readable pattern
