--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   lint:
@@ -24,7 +24,7 @@ jobs:
       contents: read
     strategy:
       matrix:
-        python-version: ['3.9']
+        python-version: ${{ github.event_name == 'workflow_dispatch' && fromJSON('["3.9", "3.10", "3.11", "3.12"]') || fromJSON('["3.9"]') }}
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
@@ -34,10 +34,13 @@ jobs:
           cache: 'pip'
       - run: pip install -e ".[test]"
       - run: pytest tests/ -m "not slow" -v
+      - name: Run slow tests
+        if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
+        run: pytest tests/ -m "slow" -v
 
   build:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
     needs: [lint, test]
     permissions:
       contents: read
@@ -56,7 +59,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: (startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch') && github.ref_type == 'tag'
     needs: [build, lint, test]
     permissions:
       id-token: write
