--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,8 @@ jobs:
           python-version: '3.9'
           cache: 'pip'
       - run: pip install -e ".[lint]"
-      - run: ruff format --check mlflow_autogluon tests
       - run: ruff check mlflow_autogluon tests
-      - run: flake8 mlflow_autogluon tests
+      - run: flake8 --select=WPS mlflow_autogluon
 
   test:
     runs-on: ubuntu-latest
