--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: '3.9'
           cache: 'pip'
       - run: pip install -e ".[lint]"
-      - run: ruff check mlflow_autogluon tests
+      - run: ruff check mlflow_autogluon
       - run: flake8 --select=WPS mlflow_autogluon
 
   test:
